--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,16 +7,16 @@
 
     <fragment
         android:id="@+id/navigation_map"
-        android:name="com.example.oc_p7.ui.map.MapFragment"
+        android:name="com.openclassrooms.oc_p7.ui.map.MapFragment"
         tools:layout="@layout/fragment_map" />
 
     <fragment
         android:id="@+id/navigation_list"
-        android:name="com.example.oc_p7.ui.list.ListFragment"
+        android:name="com.openclassrooms.oc_p7.ui.list.ListFragment"
         tools:layout="@layout/fragment_list" />
 
     <fragment
         android:id="@+id/navigation_workmates"
-        android:name="com.example.oc_p7.ui.workmates.WorkmatesFragment"
+        android:name="com.openclassrooms.oc_p7.ui.workmates.WorkmatesFragment"
         tools:layout="@layout/fragment_workmates" />
 </navigation>
