--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,9 @@
 <resources>
     <color name="main_orange">#FF5722</color>
     <color name="dark_orange">#C41B00</color>
+    <color name="blue_facebook">#507CC0</color>
+    <color name="red_google">#DF4930</color>
+    <color name="grey">#58595A</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
