--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,13 +38,28 @@
         android:layout_width="300dp"
         android:layout_height="60sp"
         android:layout_marginTop="20dp"
-        android:drawableLeft="@drawable/ic_google"
+        android:backgroundTint="@color/red_google"
+        android:drawableLeft="@drawable/ic_google_logo"
         android:drawableTint="@color/white"
         android:text="@string/login_google"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/loginFacebookButton" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/loginTwitterButton"
+        android:layout_width="300dp"
+        android:layout_height="60sp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/blue_twitter"
+        android:drawableLeft="@drawable/ic_twitter_logo"
+        android:drawableTint="@color/white"
+        android:text="@string/login_twitter"
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/loginGoogleButton" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
