--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:tint="@color/white" />
 
-    <com.google.android.material.button.MaterialButton
+    <com.facebook.login.widget.LoginButton
         android:id="@+id/loginFacebookButton"
         android:layout_width="300dp"
         android:layout_height="60sp"
@@ -26,8 +26,6 @@
         android:drawablePadding="50dp"
         android:drawableTint="@color/white"
         android:text="@string/login_facebook"
-        android:textAllCaps="false"
-        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
