--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item
-        android:id="@+id/toolbar_menu"
-        android:icon="@drawable/ic_menu"
-        android:title="@string/toolbar_menu" />
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/toolbar_search"
         android:icon="@drawable/ic_search"
+        app:showAsAction="ifRoom"
         android:title="@string/toolbar_search" />
 </menu>
