--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -19,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:visibility="gone"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
@@ -32,6 +33,7 @@
         android:id="@+id/testButton"
         android:layout_width="80dp"
         android:layout_height="60dp"
+        android:visibility="gone"
         android:backgroundTint="@color/dark_orange"
         android:text="TEST"
         app:cornerRadius="5dp"
@@ -42,6 +44,7 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/signOutButton"
         android:layout_width="80dp"
+        android:visibility="gone"
         android:layout_height="60dp"
         android:backgroundTint="@color/purple_200"
         android:text="SIGN OUT"
