--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -18,7 +18,7 @@
         android:id="@+id/location_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20sp"
+        android:layout_margin="20sp"
         android:background="@drawable/round_background"
         android:elevation="5dp"
         android:src="@drawable/ic_location"
