--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,6 +27,7 @@
         android:drawableTint="@color/white"
         android:text="@string/login_facebook"
         android:textAllCaps="false"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,8 +41,10 @@
         android:backgroundTint="@color/red_google"
         android:drawableLeft="@drawable/ic_google_logo"
         android:drawableTint="@color/white"
+
         android:text="@string/login_google"
         android:textAllCaps="false"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/loginFacebookButton" />
@@ -56,6 +59,7 @@
         android:drawableTint="@color/white"
         android:text="@string/login_twitter"
         android:textAllCaps="false"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/loginGoogleButton" />
