--- a/app/src/main/res/layout/fragment_workmates.xml
+++ b/app/src/main/res/layout/fragment_workmates.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.workmates.WorkmatesFragment">
+    tools:context=".view.home.workmates.WorkmatesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/workmate_recycler_view"
