--- a/app/src/main/res/navigation/bottom_navigation.xml
+++ b/app/src/main/res/navigation/bottom_navigation.xml
@@ -2,21 +2,21 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mobile_navigation"
+    android:id="@+id/bottom_navigation"
     app:startDestination="@+id/navigation_map">
 
     <fragment
         android:id="@+id/navigation_map"
-        android:name="com.openclassrooms.oc_p7.view.map.MapFragment"
+        android:name="com.openclassrooms.oc_p7.view.home.map.MapFragment"
         tools:layout="@layout/fragment_map" />
 
     <fragment
         android:id="@+id/navigation_list"
-        android:name="com.openclassrooms.oc_p7.view.list.ListFragment"
+        android:name="com.openclassrooms.oc_p7.view.home.list.ListFragment"
         tools:layout="@layout/fragment_list" />
 
     <fragment
         android:id="@+id/navigation_workmates"
-        android:name="com.openclassrooms.oc_p7.view.workmates.WorkmatesFragment"
+        android:name="com.openclassrooms.oc_p7.view.home.workmates.WorkmatesFragment"
         tools:layout="@layout/fragment_workmates" />
 </navigation>
