--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="dark_orange">#C41B00</color>
     <color name="yellow">#f7e320</color>
     <color name="pastel_green">#D5FBE9</color>
+    <color name="green">#3CCA33</color>
     <color name="blue_facebook">#507CC0</color>
     <color name="blue_twitter">#55ACEE</color>
     <color name="red_google">#DF4930</color>
