- Add details pojo and searchById

--- a/app/src/main/res/layout/item_layout_restaurant.xml
+++ b/app/src/main/res/layout/item_layout_restaurant.xml
@@ -1,97 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    app:cardCornerRadius="5dp">
 
-    <TextView
-        android:id="@+id/item_restaurant_name"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/item_restaurant_name"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_margin="12dp">
 
-    <TextView
-        android:id="@+id/item_restaurant_type_and_address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/item_restaurant_type_and_address"
-        android:textColor="@color/black"
-        android:textSize="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/item_restaurant_name" />
+        <TextView
+            android:id="@+id/item_restaurant_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/item_restaurant_name"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/item_restaurant_hours"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/item_restaurant_hours"
-        android:textColor="@color/black"
-        android:textSize="14dp"
-        android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/item_restaurant_type_and_address" />
+        <TextView
+            android:id="@+id/item_restaurant_type_and_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/item_restaurant_type_and_address"
+            android:textSize="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/item_restaurant_name" />
 
-    <TextView
-        android:id="@+id/item_restaurant_distance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/item_restaurant_distance"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toStartOf="@id/item_restaurant_pic"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/item_restaurant_hours"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/item_restaurant_hours"
+            android:textSize="14dp"
+            android:textStyle="italic"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/item_restaurant_type_and_address" />
 
-    <TextView
-        android:id="@+id/item_restaurant_attendees"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/item_restaurant_attendees"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="@id/item_restaurant_rate1"
-        app:layout_constraintEnd_toStartOf="@id/item_restaurant_pic"
-        app:layout_constraintTop_toTopOf="@id/item_restaurant_distance" />
+        <TextView
+            android:id="@+id/item_restaurant_distance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/item_restaurant_distance"
+            app:layout_constraintBottom_toTopOf="@id/item_restaurant_attendees"
+            app:layout_constraintEnd_toStartOf="@id/item_restaurant_pic"
+            app:layout_constraintTop_toBottomOf="@id/item_restaurant_name" />
 
-    <ImageView
-        android:id="@+id/item_restaurant_people"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_people"
-        app:layout_constraintBottom_toBottomOf="@id/item_restaurant_attendees"
-        app:layout_constraintEnd_toStartOf="@id/item_restaurant_attendees"
-        app:layout_constraintTop_toTopOf="@id/item_restaurant_attendees"
-        app:tint="@color/black" />
+        <TextView
+            android:id="@+id/item_restaurant_attendees"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/item_restaurant_attendees"
+            app:layout_constraintBottom_toBottomOf="@id/item_restaurant_rate1"
+            app:layout_constraintEnd_toStartOf="@id/item_restaurant_pic"
+            app:layout_constraintTop_toTopOf="@id/item_restaurant_distance" />
 
-    <ImageView
-        android:id="@+id/item_restaurant_pic"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:src="@drawable/ic_cutlery"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/black" />
+        <ImageView
+            android:id="@+id/item_restaurant_people"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_people"
+            app:layout_constraintBottom_toBottomOf="@id/item_restaurant_attendees"
+            app:layout_constraintEnd_toStartOf="@id/item_restaurant_attendees"
+            app:layout_constraintTop_toTopOf="@id/item_restaurant_attendees" />
 
-    <ImageView
-        android:id="@+id/item_restaurant_rate1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_star"
-        app:layout_constraintBottom_toBottomOf="@id/item_restaurant_pic"
-        app:layout_constraintEnd_toStartOf="@id/item_restaurant_pic"
-        app:tint="@color/yellow" />
+        <ImageView
+            android:id="@+id/item_restaurant_pic"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/ic_cutlery"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/item_restaurant_rate2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_star"
-        app:layout_constraintBottom_toBottomOf="@id/item_restaurant_pic"
-        app:layout_constraintEnd_toStartOf="@id/item_restaurant_pic"
-        app:tint="@color/yellow" />
+        <ImageView
+            android:id="@+id/item_restaurant_rate1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_star"
+            app:layout_constraintBottom_toBottomOf="@id/item_restaurant_pic"
+            app:layout_constraintEnd_toStartOf="@id/item_restaurant_pic"
+            app:tint="@color/yellow" />
+
+        <ImageView
+            android:id="@+id/item_restaurant_rate2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_star"
+            app:layout_constraintBottom_toBottomOf="@id/item_restaurant_pic"
+            app:layout_constraintEnd_toStartOf="@id/item_restaurant_pic"
+            app:tint="@color/yellow" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</androidx.cardview.widget.CardView>
