--- a/app/src/main/res/layout/item_layout_workmates.xml
+++ b/app/src/main/res/layout/item_layout_workmates.xml
@@ -8,7 +8,7 @@
     android:elevation="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp">
 
@@ -24,7 +24,7 @@
 
         <TextView
             android:id="@+id/workmate_text"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:text="@string/workmate_text"
