--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="blue_twitter">#55ACEE</color>
     <color name="red_google">#DF4930</color>
     <color name="grey">#58595A</color>
+    <color name="light_grey">#BCBCBD</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
